<resources>
    <string name="app_name">android_bootcamp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer_internally">Transfer internally</string>
    <string name="from">from</string>
    <string name="_350">350 €</string>
    <string name="_10">10 €</string>
    <string name="_2345">**** 2345</string>
    <string name="lorem_ipsum_1_0_25_lorem_ipsum_is_simply">Lorem Ipsum 1$ = 0.25 Lorem Ipsum is simply</string>
    <string name="transfer_between_your_accounts">Transfer between your accounts</string>
    <string name="description">description</string>
    <string name="continue1">Continue</string>
    <string name="to">to</string>
    <string name="sell">sell</string>
    <string name="card_type">Card Type</string>
    <string name="balance">Balance</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="select_account">Select Account</string>
    <string name="select_card">Select Card</string>
    <string name="gel">%1$s₾</string>
    <string name="dolar">%1$s$</string>
    <string name="euro">%1$s €</string>
    <string name="cardwithstars">**** %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="enter_value">Enter value</string>
    <string name="phone_number">Phone Number</string>
    <string name="personal_id_11_digits">Personal ID</string>
    <string name="select_transfer_type">Select Transfer Type</string>
    <string name="lari1">%1$s ₾</string>
</resources>