<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootToAccount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_transfer_type"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/rbAccountNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_number" />

        <RadioButton
            android:id="@+id/rbPersonalId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_id_11_digits" />

        <RadioButton
            android:id="@+id/rbPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_value"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:id="@+id/progressBar"/>

</LinearLayout>
