<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.features.main.MainFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/transfer_internally"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/from_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/from"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <LinearLayout
        android:id="@+id/from_item_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_card"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from_text_id">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivFromVisaLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:src="@drawable/visa_icon" />

        <LinearLayout
            android:id="@+id/from_info_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFromAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_350"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFromCardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/to_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/to"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from_item_id" />

    <LinearLayout
        android:id="@+id/to_form_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_card"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to_text_id">

        <ImageView
            android:id="@+id/ivToVisaLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:src="@drawable/visa_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvToAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvToCardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2345"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSellFirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutSellSecond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to_form_id"
        app:suffixText="$">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sell_first_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sell"
            android:inputType="number"
            android:paddingHorizontal="24dp"
            android:textColorHint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSellSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textInputLayoutSellFirst"
        app:layout_constraintTop_toBottomOf="@id/to_form_id"
        app:suffixText="$">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sell_second_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sell"
            android:inputType="number"
            android:paddingHorizontal="24dp"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvExchangeRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/lorem_ipsum_1_0_25_lorem_ipsum_is_simply"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSellFirst" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/description"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExchangeRate" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/bg_button"
        android:text="@string/continue1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>